<resources>
    <string name="app_name">PATHFIT2</string>
    <string name="pathfit2">Pathfit 2 Fitness Exercise</string>
    <string name="healthRelated">Health Related Components of Physical Fitness</string>
    <string name="principlesAndMethods">Principle And Methods of Cardio Respiratory System</string>
    <string name="typeOfWeightTraining">Type of Weight Training Program</string>
    <string name="muscleFibreTypes">Muscle Fiber Types</string>
    <string name="muscoSkeletalSystem">Muscoskeletal System</string>
    <string name="safetyConcern">Safety Concern</string>
    <string name="stretchingFlexibility">Stretcing And Flexibility</string>
    <string name="tabataWorkout">Tabata Workout</string>
    <string name="theSevenMinWorkout">The Seven Minute Workout</string>
    <string name="benefitsOfCircuitTraining">Benefits of Circuit Training</string>
    <string name="context">Context:</string>
    <string name="exercise">Exercise</string>
    <string name="lesson1_topic1">
        Cardio Vascular Endurance\n
         It is the ability of the heart and lungs to work together to provide the needed oxygen and fuel to the body during sustained workloads.\n
        Muscular Strength
        It is the amount of force a muscle can produce.\n
        Body Composition\n
        It is the amount of fat mass compared to lean muscle mass, bone, and organs.\n
        Muscular Endurance\n
        It is the ability of the muscles to perform continuously without fatigue.\n
        Flexibility\n
        It is the ability of each joint to move through the available range of motion for a specific joint.\n
    </string>
    <string name="lesson1_cardioVascular">Cardio Vascular Endurance</string>
    <string name="lesson1_cardioVascularTopic">
         It is the ability of the heart and lungs to work together to provide the needed oxygen and fuel to the body during sustained workloads
    </string>
    <string name="lesson1_muscularStrength">Muscular Strength</string>
    <string name="lesson1_muscularStrengthTopic"> It is the amount of force a muscle can produce.</string>
    <string name="lesson1_bodyComposition">Body Composition</string>
    <string name="lesson1_bodyCompositionTopic">It is the amount of fat mass compared to lean muscle mass, bone, and organs.</string>
    <string name="lesson1_muscularEndurance">Muscular Endurance</string>
    <string name="lesson1_muscularEnduranceTopic"> It is the ability of the muscles to perform continuously without fatigue.\n</string>
    <string name="lesson1_Flexibility"> Flexibility</string>
    <string name="lesson1_FlexibilityTopic">It is the ability of each joint to move through the available range of motion for a specific joint.</string>
    <string name="lesson1_skillRelated">Skill Related PE Fitness</string>
    <string name="lesson1_skillRelatedTopic">
        Agility\n
        The ability to change body positions quickly and keep the body under control when moving.\n\n
        Power\n
        The ability to combine strength with speed while moving.\n\n
        Balance\n
        The ability to keep the body in a stable position while standing and moving.\n\n
        Speed\n
        The ability to move all or a part of the body quickly.\n\n
        Coordination\n
        The ability of body parts to work together when you perform an activity.\n\n
        Reaction Time\n
        The ability to move quickly once a signal to start moving is received.
    </string>
    <string name="lesson1_benefitsOfPE">Benefits of PE exercise</string>
    <string name="lesson1_benefitsOfPEtopic">
        Helps you immediately feel better, function better, and sleep better. It also reduces anxiety\n
        Physical Activity contributes to preventing and managing noncommunicable diseases such as cardiovascular diseases, cancer and diabetes.\n
    </string>
    <string name="lesson1_typesOfPE">Types of PHYSICAL ACTIVITY</string>
    <string name="lesson1_typesOfPETopic">
        AEROBIC PHYSICAL ACTIVITY\n
        Activity that is performed long enough to maintain or improve an individual’s cardiorespiratory fitness. Example: Walking, Dancing, Running , Swimming\n\n
        ANAEROBIC PHYSICAL ACTIVITY\n
        High-intensity activity that exceeds the capacity of the cardiovascular system to provide oxygen to muscle cells. Example: Sprinting, Power Lifting, Cycling Sprint
    </string>
    <string name="lesson1_obesity">Obesity</string>
    <string name="lesson1_obesityTopic">

        Overweight and obesity are classified using the body mass index ( BMI ) . \n\n
        BMI = weight in kg ÷ ( height )² in m\n
        Underweight = 18.5\n
        Normal weight = 18.5 – 24.9\n
        Over weight = 25 – 29.9\n
        Obesity = 30 or greater\n\n
         AGE,FAMILY HISTORY,CHOLESTEROL INTAKE AND PHYSICAL INACTIVITY\n\n

            Obese individuals have a shorter life expectancy and greater risks of CHD stroke, hypertension, certain cancers, abnormal menses, etc.\n \n
            Restricting caloric intake and consuming more calories through physical activity and exercise are effective ways of reducing body weight and fatness.
    </string>
    <string name="exercisePreperation">Exercise Prescription for Cardio Respiratory Fitness</string>
    <string name="warmUp">Warm Up</string>
    <string name="workOut">Work Out</string>
    <string name="coolDown">Cool Down</string>
    <string name="warmUpTopic">Purpose is to \n\n
        INCREASE HR AND BODY TEMPERATURE \n
        
        ELEVATE BLOOD FLOW TO THE MUSCLES \n
        
        CONSISTS OF 5 TO 15 MINUTES SLOW – PACED EXERCISE
    </string>
    <string name="workOutTopic">This component includes the \n \n
        -MODE \n
        -FREQUENCY\n
        -INTENSITY\n
        -DURATION OF EXERCISE\n
    </string>
    <string name="modeworkout">
        Activities that use a large muscle mass in a slow, rhythmical pattern
    </string>
    <string name="frequencyworkout">
        3 to 5 sessions per week.
    </string>
    <string name="intensityworkout">
       can be monitored indirectly by measurement of target heart rate.
    </string>
    <string name="durationworkout">
       it depends on the individual’s initial level of fitness and training intensity.
    </string>
    <string name="cooldownworkout">
        Purpose is to \n
        - Promote blood return to the heart / prevent blood pooling in arms and legs \n
        Decrease the muscle soreness and cardiac irregularities \n
        5 – 15 minutes of light exercise and stretching
    </string>
    <string name="trainingTechniques">
        Training techniques can be given in the form of\n
    - CROSS TRAINING\n
    - LONG , SLOW DISTANCE TRAINING\n
    - INTERVAL TRAINING\n
    - FARTLEK TRAINING

    </string>
    <string name="crossTraining">
        Is an exercise regimen that uses several modes of training.\n
        Advantages: reduces boredom and reduce injuries\n
        Disadvantages: lacks training specificity

    </string>
    <string name="longSlowDistance">
        Is enjoyable because the intensity is not high and can go 40 – 60 minutes.\n

        Advantages : risk of injury is minimal
    </string>
    <string name="intervalTraining">
        -An alternating short intense activity with longer less, intense activity

        -Each interval is followed by a rest period.
    </string>
    <string name="fartlekTraining">
        -Involves varying your pace throughout your run (fast segments and slow jogs).\n
    -Advantages: reduce the possibility of boredom

    </string>
    <string name="lesson2_FiveHealthRelatedComponentsOfPE">Five Health Related Components Of PE</string>
    <string name="lesson2_FiveHealthRelatedComponentsOfPETopic">
        Cardiovascular Endurance\n
        -Refers to the ability of the cardiovascular and respiratory systems to supply oxygen and nutrients to muscles during sustained physical activity.\n\n
        Muscular Strength\n
        -The maximum force that a muscle or set of muscles is capable of exerting.\n\n
        Muscular Endurance\n
        -The ability of your muscles to sustain exercise for a period of time.\n\n
        Flexibility\n
        -The ability to move muscles and joints through a full range of motion.\n\n
        Body Composition\n
        -Your body’s ratio of fat mass to fat-free mass like muscle and bone.
    </string>
    <string name="lesson2_parametersOfPhysicalFitness">Parameters Of Physical Fitness</string>
    <string name="lesson2_parametersOfPhysicalFitnessTopic">
    Cardiovascular Endurance
    -Refers to the ability of the cardiovascular and respiratory systems to supply oxygen and nutrients to muscles during sustained physical activity.\n\n
    Muscular Strength\n
    -The maximum force that a muscle or set of muscles is capable of exerting.\n\n
    Muscular Endurance\n
    -The ability of your muscles to sustain exercise for a period of time.\n\n
    Flexibility\n
    -The ability to move muscles and joints through a full range of motion.\n\n
    Body Composition\n
    -Your body’s ratio of fat mass to fat-free mass like muscle and bone.\n\n
    Balance\n
    -Ability to maintain equilibrium while stationary or moving.\n\n
    Coordination\n
    -Integration of sensory and motor systems to execute smooth, accurate, and controlled movements.\n\n
    Agility\n
    -Ability to change direction quickly and efficiently.\n\n
    Speed\n
    -Rate at which an individual can perform a movement or cover a distance in a given period.\n\n
    Power\n
    -Combination of strength and speed to perform explosive movements.
</string>
    <string name="lesson2_benefitsOfAddressingHealthRelatedComponents">Benefits Of Addressing Health Related Components</string>
    <string name="lesson2_benefitsOfAddressingHealthRelatedComponentsTopic">

        •DISEASE PREVENTION.

        •IMPROVED QUALITY OF LIFE.\n

        •ENHANCED FUNCTIONAL CAPACITY.

    </string>
    <string name="lesson3_training">Training</string>
    <string name="lesson3_trainingTopic"> Refers to the act, process, or method of teaching a person  or  animal  a  particular  skill,  knowledge,  or type of behavior.</string>
    <string name="lesson3_specificity">Specificity</string>
    <string name="lesson3_specificityTopic"> It  is  a  fitness  principle  that  describes  how  fitness improvements   or   adaptations   resulting   from exercise stress are specific to the type of training performed.</string>
    <string name="lesson3_SportSpecificTraining">Sport-Specific Training</string>
    <string name="lesson3_SportSpecificTrainingTopic">Athletes engage in training activities directly related to their sport.</string>
    <string name="lesson3_highIntensity">High-Intensity Interval Training (HIIT)</string>
    <string name="lesson3_highIntensityTopic"> HIIT	session involve	short,	intense	bursts	of	exercise followed by brief rest periods.</string>
    <string name="lesson3_overload">Overload</string>
    <string name="lesson3_overloadTopic"> The overload principle states that adaptation to exercise stress  occurs  when  the  workload  is  progressively increased during training.\n
    To improve cardio respiratory fitness, gradually increase exercise intensity, duration, or frequency over time.</string>
    <string name="lesson3_Adaptation">Adaptation</string>
    <string name="lesson3_AdaptationTopic">Refers to the	body’s	response	to	exercise	stress	over time.
    It	involves	changes	in	physiological	systems	to	better cope with the demands of physical activity.</string>
    <string name="lesson3_Progression">Progression</string>
    <string name="lesson3_ProgressionTopic">refers	to	the	gradual	increase	in	exercise	intensity, duration, or frequency over time.
    It ensures that the body continues to adapt and improve as fitness levels increase.</string>
    <string name="lesson4_Training">TRAINING</string>
</resources>