<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lessonContents"
    android:background="@color/bgColorMain">

   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"

   >
      <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:text="Lessons"
          android:textSize="43sp"
          android:fontFamily="@font/agbalumo"

          android:textColor="@color/txtColor"
          />
   </androidx.appcompat.widget.Toolbar>
   <ImageView
       android:layout_width="300dp"
       android:layout_height="300dp"
       android:src="@mipmap/imgbg"
       android:layout_alignParentEnd="true"
       android:layout_marginTop="30dp"
       android:layout_below="@+id/toolbar"
       />
   <ImageView
       android:layout_width="200dp"
       android:layout_height="300dp"
       android:src="@mipmap/imgbglesson"
       android:layout_alignParentBottom="true"
       />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar">
   <LinearLayout
       android:id="@+id/layout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"

       >
      <androidx.cardview.widget.CardView
         android:id="@+id/lesson1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp"
          app:contentPadding="18dp"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="20dp"
          android:layout_marginRight="50dp"
          android:layout_marginLeft="50dp"
          android:backgroundTint="@color/bgColorMainButtons">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/pathfit2"
             android:textSize="20sp"
             android:textAlignment="center"
             android:fontFamily="@font/anton"
             android:textColor="@color/txtColor"
             />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/lesson2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp"
          app:contentPadding="18dp"
          android:layout_marginRight="50dp"
          android:layout_marginLeft="50dp"
          android:backgroundTint="@color/bgColorMainButtons"
          >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/healthRelated"
             android:textSize="20sp"
             android:textAlignment="center"
             android:fontFamily="@font/anton"
             android:textColor="@color/txtColor"
             />
      </androidx.cardview.widget.CardView>



      <androidx.cardview.widget.CardView
          android:id="@+id/lesson4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp"
          app:contentPadding="18dp"
          android:layout_marginTop="20dp"
          android:layout_marginRight="50dp"
          android:layout_marginLeft="50dp"
          android:backgroundTint="@color/bgColorMainButtons">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/typeOfWeightTraining"
             android:textSize="20sp"
             android:textAlignment="center"
             android:fontFamily="@font/anton"
             android:textColor="@color/txtColor"
             />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/lesson5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp"
          app:contentPadding="18dp"
          android:layout_marginTop="20dp"
          android:layout_marginRight="50dp"
          android:layout_marginLeft="50dp"
          android:backgroundTint="@color/bgColorMainButtons"
          >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/principlesAndMethods"
             android:textSize="20sp"
             android:fontFamily="@font/anton"
             android:textAlignment="center"
             android:textColor="@color/txtColor"
             />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/lesson6"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp"
          app:contentPadding="18dp"
          android:layout_marginTop="20dp"
          android:layout_marginRight="50dp"
          android:layout_marginLeft="50dp"
          android:backgroundTint="@color/bgColorMainButtons">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/muscleFibreTypes"
             android:textSize="21sp"
             android:textAlignment="center"
             android:fontFamily="@font/anton"
             android:textColor="@color/txtColor"
             />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/lesson7"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp"
          app:contentPadding="18dp"
          android:layout_marginTop="20dp"
          android:layout_marginRight="50dp"
          android:layout_marginLeft="50dp"
          android:backgroundTint="@color/bgColorMainButtons">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/muscoSkeletalSystem"
             android:textSize="20sp"
             android:textAlignment="center"
             android:fontFamily="@font/anton"
             android:textColor="@color/txtColor"
             />
      </androidx.cardview.widget.CardView>



      <androidx.cardview.widget.CardView
          android:id="@+id/lesson9"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp"
          app:contentPadding="18dp"
          android:layout_marginTop="20dp"
          android:layout_marginRight="50dp"
          android:layout_marginLeft="50dp"
          android:backgroundTint="@color/bgColorMainButtons">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/safetyConcern"
             android:textSize="20sp"
             android:textAlignment="center"
             android:fontFamily="@font/anton"
             android:textColor="@color/txtColor"
             />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/lesson10"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp"
          app:contentPadding="18dp"
          android:layout_marginTop="20dp"
          android:layout_marginRight="50dp"
          android:layout_marginLeft="50dp"
          android:backgroundTint="@color/bgColorMainButtons">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/stretchingFlexibility"
             android:textSize="20sp"
             android:textAlignment="center"
             android:fontFamily="@font/anton"
             android:textColor="@color/txtColor"
             />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/lesson11"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp"
          app:contentPadding="18dp"
          android:layout_marginTop="20dp"
          android:layout_marginRight="50dp"
          android:layout_marginLeft="50dp"
          android:backgroundTint="@color/bgColorMainButtons">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/tabataWorkout"
             android:textSize="20sp"
             android:textAlignment="center"
             android:fontFamily="@font/anton"
             android:textColor="@color/txtColor"
             />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/lesson12"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp"
          app:contentPadding="18dp"
          android:layout_marginTop="20dp"
          android:layout_marginRight="50dp"
          android:layout_marginLeft="50dp"
          android:backgroundTint="@color/bgColorMainButtons">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/theSevenMinWorkout"
             android:textSize="20sp"
             android:textAlignment="center"
             android:fontFamily="@font/anton"
             android:textColor="@color/txtColor"
             />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/lesson13"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp"
          app:contentPadding="18dp"
          android:layout_marginTop="20dp"
          android:layout_marginRight="50dp"
          android:layout_marginLeft="50dp"
          android:backgroundTint="@color/bgColorMainButtons">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/benefitsOfCircuitTraining"
             android:textSize="20sp"
             android:textAlignment="center"
             android:fontFamily="@font/anton"
             android:textColor="@color/txtColor"
             />
      </androidx.cardview.widget.CardView>
   </LinearLayout>
</ScrollView>

</RelativeLayout>