<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/bgColorMainButtons"
    app:cardElevation="4dp"
    app:cardCornerRadius="15dp"
    android:layout_margin="8dp"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <!-- Title and Description (Always Visible) -->
        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson1_cardioVascular"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/card_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/context"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <!-- Expandable Content -->
        <LinearLayout
            android:id="@+id/card_expandable_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Add more views that should be visible when expanded -->
            <ImageView
                android:id="@+id/card_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/exercise"
                />

            <TextView
                android:id="@+id/card_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lesson1_cardioVascularTopic"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>